Fix horizontal scroll bar showing up on windows

--- a/src/stylesheets/modules/snapshots.styl
+++ b/src/stylesheets/modules/snapshots.styl
@@ -64,7 +64,7 @@
   .main-results-wrapper
     height: 400px
     max-height: 45vh
-    overflow: scroll
+    overflow-y: scroll
 
     tr
       color: $colors.text-mid
